<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.areetaw.whatkind.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="60dp"
            android:gravity="center"
            android:text="Welcome to "
            android:textAllCaps="true"
            android:textSize="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="What Kind?"
            android:textSize="70dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="70dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="scroll down to play"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="Name of Player"
            android:inputType="textCapWords" />

        <TextView
            style="@style/Questions"
            android:text="@string/question1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/corgi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/Answers"
                android:text="Corgi"/>

            <RadioButton
                style="@style/Answers"
                android:text="Chihuahua"/>

            <RadioButton
                style="@style/Answers"
                android:text="Shiba"/>

        </LinearLayout>

        <TextView
            style="@style/Questions"
            android:text="@string/question2"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/tabby" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/Answers"
                android:text="Birman" />

            <RadioButton
                style="@style/Answers"
                android:text="Tabby" />

            <RadioButton
                style="@style/Answers"
                android:text="Persian" />

        </LinearLayout>

        <TextView
            style="@style/Questions"
            android:text="@string/question3"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/geometry" />

        <EditText
            android:id="@+id/corgi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:hint="Kind of math"
            android:inputType="textCapWords" />

        <TextView
            style="@style/Questions"
            android:text="@string/question4"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/cyan" />

        <TextView
            style="@style/Questions"
            android:text="@string/question5"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/kohlrabi" />

        <TextView
            style="@style/Questions"
            android:text="@string/question6"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/mac" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="finishGame"
            android:text="Submit"
            android:textAllCaps="true" />
    </LinearLayout>

</ScrollView>
